force-app/main/default/objects/Plant_Products__c/Plant_Products__c.object-meta.xml
<CustomObject>
    <label>Plant Product</label>
    <nameField>
        <label>Plant Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>