force-app/main/default/objects/Plant_Products__c/fields/Envelope_Plant_Division__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Plant_Division__c</fullName>
    <description>Envelope Plant Facilities Only</description>
    <inlineHelpText>Envelope Plant Facilities Only</inlineHelpText>
    <label>Envelope Plant Division</label>
    <length>100</length>
    <type>Text</type>
</CustomField>