force-app/main/default/objects/Plant_Products__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Plant Products</relationshipLabel>
    <relationshipName>Plant_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>