force-app/main/default/objects/Plant_Products__c/fields/Plant_Product_Cenveo_Old_Id__c.field-meta.xml
<CustomField>
    <fullName>Plant_Product_Cenveo_Old_Id__c</fullName>
    <label>Plant Product Cenveo Old Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>