force-app/main/default/objects/Plant_Products__c/fields/Plant_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Plant_Product_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant Product ID</label>
    <type>Text</type>
</CustomField>