force-app/main/default/objects/Plant_Products__c/fields/Plant_Product_Name_formula__c.field-meta.xml
<CustomField>
    <fullName>Plant_Product_Name_formula__c</fullName>
    <formula>Plant__r.Name +&quot;-&quot;+ Product__r.Name</formula>
    <label>Plant Product Name formula</label>
    <type>Text</type>
</CustomField>