force-app/main/default/objects/Plant_Products__c/fields/Product_Sold__c.field-meta.xml
<CustomField>
    <fullName>Product_Sold__c</fullName>
    <defaultValue>&quot;OTHER&quot;</defaultValue>
    <description>This field is only used to track the type of product sold which is determined by the Plant Product</description>
    <inlineHelpText>This field is only used to track the type of product sold which is determined by the Plant Product</inlineHelpText>
    <label>Product Sold</label>
    <length>255</length>
    <type>Text</type>
</CustomField>